--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, custom/asides/found_on.html]
+default_asides: [custom/asides/top_category_list.html, asides/recent_posts.html, custom/asides/found_on.html]
 #, asides/googleplus.html
 #, asides/github.html
 #, asides/pinboard.html
@@ -107,3 +107,7 @@ google_analytics_tracking_id: UA-37305366-1
 
 # Facebook Like
 facebook_like: false
+
+#Top_category:
+top_category_limit: 0
+include_all: true
