--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://maxisam.github.com
-title: Thought, Code & Soul
+title: Thought & <Code />
 subtitle:
 author: Sam Lin
 simple_search: http://google.com/search
