change customize url for linkedin

--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ disqus_show_comment_count: ture
 stackoverflow_user: 667767
 
 #linkedin
-linkedin_user: maxisam
+linkedin_user: szchyuanlin
 
 # Google Analytics
 google_analytics_tracking_id: UA-37305366-1
